style.css
body{
  background-image: url("https://tenants-to-homeowners.org/wp-content/uploads/2017/03/just-green-tones-for-website-backgrounds-and-wallpapers-f4.jpg" );
  background-color: #cccccc;
  background-repeat: no-repeat;
  background-size: cover;
}

.nav-wrapper{
  background-color: #03e5b7;
  background-image: linear-gradient(315deg, #03e5b7 0%, #037ade 74%);
  grid-area: nav-wrapper;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  border-radius: 15px;
}

#navigation li{
  display: inline-block;
  margin-right: 10px;
  margin-left: 10px;
}

.container{
  display:flex;
  align-items:center;
  flex-wrap: wrap;
  justify-content: center;
 
}
.container2{
  display:flex;
  align-items:center;
  flex-wrap: wrap;
  justify-content: center;
  flex-direction: column;
}

.box-1{
flex:1;
order:1;
  
padding:10px;
  
}
.box-2{
flex:1;
order:1;
border:1px #ccc solid;
padding:10px;
  
}

.slot1, .slot2, .slot3 {
  box-shadow: 0 4px 8px 0 brown;
  background-color: limegreen;
  width: 300px;
  height: 300px;
  margin: auto;
  text-align: center;
}

.org-title{
  margin-right: 30px;
  font-weight: bold;
}

.list{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-areas: 
      'slot1 slot2 slot3';
}

.box{
  display:flex;
  align-items:center;
  flex-wrap: wrap;
  justify-content: center;
}

.pic{
  display: block;
  width: 300px;
  height: 200px;
  margin-bottom: 20px;
}

